name:                js2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/js2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable js2-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , js2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/js2